adding team cards

--- a/style.css
+++ b/style.css
@@ -1,6 +1,25 @@
+body {
+   display: flex;
+   min-height: 100vh;
+   flex-direction: column;
+ }
+
+ main {
+   flex: 1 0 auto;
+ }
+   
+.foodle {
+  text-align: center;
+}
+
 .see-food {
 	font-family: 'Pacifico', cursive;
 	color: #263238;
 	font-size: 55px;
 	margin-top: 55px;
+}
+
+div.card {
+  margin-left: 20px;
+  margin-right: 20px;
 }
