--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+font-family: 'Questrial', sans-serif;
+}
+
 body {
    display: flex;
    min-height: 100vh;
@@ -7,15 +11,17 @@ body {
  main {
    flex: 1 0 auto;
  }
-   
+
 .foodle {
   text-align: center;
+
 }
 
 .see-food {
 	font-family: 'Pacifico', cursive;
-	color: #263238;
-	font-size: 55px;
+  color: #4dd0e1;
+	/*color: #263238;*/
+	font-size: 75px;
 	margin-top: 55px;
 }
 
@@ -23,3 +29,40 @@ div.card {
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.screenshot {
+  /*width: 200px;*/
+  width: 100%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 50px;
+  /*max-width: 200px;*/
+}
+
+footer.page-footer {
+  background-color: #ff7043;
+}
+
+img.activator {
+  width: 100%;
+  height: 200px;
+}
+
+button.btn {
+  background-color: #d84315;
+  margin-top: 10px;
+  text-align: center;
+}
+
+#droidP {
+  text-align: center;
+  color: #4dd0e1;
+  font-weight: bold
+}
+#droidButton {
+  text-align: center;
+}
+
+/*div#home {*/
+  /*margin-left: 50px;*/
+/*}*/
