--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ button.btn {
 
 #droidP {
   text-align: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
   color: #4dd0e1;
   font-size: 16px;
   font-weight: bold
